# App_2.0.0

./: .env.example  .gitignore  README.md  agents.md  compose.prod.yaml  compose.yaml  docker-compose.yml  migrate_from_json.py
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: __init__.py  auth.py  background.py  cache.py  config.py  database.py  db.py  deps.py  main.py  metrics.py  models.py  rate_limit.py  schemas.py  security.py
backend/app/models/: __init__.py  assignments.py  audit.py  files.py  missions.py  users.py
backend/app/routers/: admin_users.py  assignments.py  auth.py  files.py  missions.py  planning.py  users.py  utils.py
backend/app/schemas/: __init__.py  assignments.py  missions.py  users.py
backend/app/services/: notifications.py  publishing.py  storage_s3.py
backend/tests/: test_health.py
deploy/: README.md
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/ui/: button.tsx
frontend/src/pages/: AdminUsers.tsx  Dashboard.tsx  Login.tsx  Missions.tsx  Planning.tsx  Settings.tsx
infra/caddy/: Caddyfile
infra/grafana/dashboards/: api.json
infra/loki/: loki-config.yml
infra/prometheus/: prometheus.yml
perf/: load.js  smoke.js
scripts/: deploy_prod.ps1  dev_down.ps1  dev_up.ps1  rollback.ps1  seed.ps1  test_all.ps1
